--- a/app/src/main/res/layout/fragment_calorie.xml
+++ b/app/src/main/res/layout/fragment_calorie.xml
@@ -11,88 +11,119 @@
         style="@style/title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:text="@string/calculated_items_Screen_Title"
+        android:text="@string/title_text"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_containing_status"
-        android:layout_width="0dp"
-        android:layout_height="220dp"
-        android:layout_marginHorizontal="24dp"
+        android:layout_width="383dp"
+        android:layout_height="147dp"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
-        app:cardBackgroundColor="#F5F5F5"
-        app:cardCornerRadius="16dp"
+        app:cardBackgroundColor="#fff"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="6dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/calculated_items_Screen_Title">
 
-        <TextView
-            android:id="@+id/card_status_description"
-            android:layout_width="137dp"
-            android:layout_height="61dp"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="58dp"
-            android:text="@string/card_status_description"
-            android:textColor="@color/black"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/card_status_face"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="130dp"
-            android:text="@string/card_status_face"
-            android:textColor="@color/black"
-            android:textSize="48sp"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/card_status_description"
+                style="@style/body_text"
+                android:layout_width="240dp"
+                android:layout_height="39dp"
+                android:text="@string/card_status_description"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/progress_bar"
+                app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
-        <ProgressBar
-            android:id="@+id/progress_bar"
-            style="@style/CircularDeterminateProgressBar"
-            android:layout_width="190dp"
-            android:layout_height="190dp"
-            android:layout_gravity="end"
-            android:layout_marginTop="20dp"
-            tools:progress="110" />
+            <TextView
+                android:id="@+id/card_status_face"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="9dp"
+                android:layout_marginBottom="8dp"
+                android:text="@string/card_status_face"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/progress_bar"
+                app:layout_constraintTop_toBottomOf="@+id/card_status_description" />
 
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="end"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="60dp"
-            android:background="@drawable/ic_calories_icon"
-            android:contentDescription="@string/calories_icon_description" />
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                style="@style/CircularDeterminateProgressBar"
+                android:layout_width="142dp"
+                android:layout_height="142dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:progress="70" />
 
-        <TextView
-            android:id="@+id/calories_count"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="end"
-            android:layout_marginTop="106dp"
-            android:layout_marginEnd="54dp"
-            android:text="@string/calories"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="50dp"
+                android:layout_height="46dp"
+                android:layout_marginBottom="14dp"
+                android:background="@drawable/ic_calories_icon"
+                android:contentDescription="@string/calories_icon_description"
+                app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
+                app:layout_constraintEnd_toEndOf="@+id/progress_bar"
+                app:layout_constraintStart_toStartOf="@+id/progress_bar"
+                app:layout_constraintTop_toTopOf="@+id/progress_bar" />
 
-        <TextView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="end"
-            android:layout_marginTop="135dp"
-            android:layout_marginEnd="44dp"
-            android:text="@string/cal"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/calories_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="70%"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="@+id/imageView"
+                app:layout_constraintStart_toStartOf="@+id/imageView"
+                app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                app:layout_constraintVertical_chainStyle="packed"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="142dp"
+                android:text="Goal calorie :  "
+                android:textColor="#979797"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/textView8"
+                app:layout_constraintStart_toEndOf="@+id/progress_bar"
+                app:layout_constraintStart_toStartOf="@+id/progress_bar"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2500"
+                android:paddingVertical="4dp"
+                android:textColor="#008E7F"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/card_status_description"
+                app:layout_constraintStart_toEndOf="@+id/progress_bar"
+                app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
@@ -102,7 +133,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="66dp"
+        android:layout_marginTop="29dp"
+        android:layout_marginBottom="4dp"
         android:text="@string/items_selected"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,11 +144,11 @@
         android:id="@+id/recycler_view_added_items"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="400dp"
-        tools:listitem="@layout/item_meal"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_marginTop="275dp"
         android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/selected_items" />
+        app:layout_constraintTop_toBottomOf="@+id/selected_items"
+        tools:listitem="@layout/item_meal" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
