--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="primary">#37B64B</color>
-    <color name="dark_green">#022508</color>
+    <color name="dark_green">#474747</color>
     <color name="gray_mid">#C4C4C4</color>
     <color name="textView_color">#F5F5F5</color>
 
@@ -19,7 +19,8 @@
     <color name="primary_light">#F0F9F4</color>
     <color name="icon_dark">#95B4A7</color>
     <color name="icon_light">#C1DECE</color>
-    <color name="red_pie_chart">#FF6752</color>
-    <color name="yellow_pie_chart">#FAB131</color>
-    <color name="blue_pie_chart">#0064E5</color>
+    <color name="red_pie_chart">#73C080</color>
+    <color name="yellow_pie_chart">#C8ECE2</color>
+    <color name="blue_pie_chart">#005F73</color>
+    <color name="green_text_color">#008E7F</color>
 </resources>
