--- a/app/src/main/res/layout/fragment_calorie.xml
+++ b/app/src/main/res/layout/fragment_calorie.xml
@@ -22,7 +22,8 @@
         android:id="@+id/card_containing_status"
         android:layout_width="383dp"
         android:layout_height="147dp"
-        android:layout_marginHorizontal="16dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         app:cardBackgroundColor="#fff"
         app:cardCornerRadius="8dp"
