--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -122,7 +122,7 @@
             android:layout_height="16dp"
             android:layout_marginStart="@dimen/margin_mid"
             android:background="@drawable/circle_shape"
-            android:backgroundTint="@color/blue_pie_chart"
+            android:backgroundTint="@color/light_blue_pie_chart"
             android:elevation="@dimen/elevation_smail"
             app:layout_constraintBottom_toBottomOf="@id/pie_chart_details"
             app:layout_constraintStart_toEndOf="@id/pie_chart_details"
@@ -158,7 +158,7 @@
             android:layout_height="16dp"
             android:layout_marginStart="16dp"
             android:background="@drawable/circle_shape"
-            android:backgroundTint="@color/red_pie_chart"
+            android:backgroundTint="@color/dark_green_pie_chart"
             android:elevation="@dimen/elevation_smail"
             app:layout_constraintBottom_toBottomOf="@id/pie_chart_details"
             app:layout_constraintStart_toEndOf="@+id/carb_number"
@@ -193,7 +193,7 @@
             android:layout_height="16dp"
             android:layout_marginStart="16dp"
             android:background="@drawable/circle_shape"
-            android:backgroundTint="@color/yellow_pie_chart"
+            android:backgroundTint="@color/green_text_color"
             android:elevation="@dimen/elevation_smail"
             app:layout_constraintBottom_toBottomOf="@id/pie_chart_details"
             app:layout_constraintStart_toEndOf="@+id/protein_number"
