--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,8 +19,8 @@
     <color name="primary_light">#F0F9F4</color>
     <color name="icon_dark">#95B4A7</color>
     <color name="icon_light">#C1DECE</color>
-    <color name="red_pie_chart">#73C080</color>
-    <color name="yellow_pie_chart">#C8ECE2</color>
-    <color name="blue_pie_chart">#005F73</color>
+    <color name="light_blue_pie_chart">#C8ECE2</color>
+    <color name="dark_green_pie_chart">#37B64B</color>
     <color name="green_text_color">#008E7F</color>
+
 </resources>
